# keepup

./: CLAUDE.md  PRD.md  pyproject.toml
.github/workflows/: digest.yml
config/: topics.yml
docs/: index.html
docs/archive/: 2026-W27.html  2026-W28.html
keepup/: __main__.py  bucketize.py  config.py  llm.py  models.py  render.py  select.py  synthesize.py
keepup/fetchers/: __init__.py  common.py  hn.py  markfetch.py  openai_releasenotes.py  rss.py  sitemap.py  x.py
keepup/prompts/: bucketize.md  synthesize.md
templates/: digest.html.j2
