[project]
name = "keepup"
version = "0.1.0"
description = "Weekly tech digest: fetch, select, synthesize, render, publish"
requires-python = ">=3.14"
dependencies = [
    "feedparser>=6.0",
    "requests>=2.32",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "openai>=1.50",
]

# Plain script package: run with `uv run python -m keepup`, nothing to build.
[tool.uv]
package = false
