[project]
name = "keepup"
version = "0.1.0"
description = "Weekly tech digest: fetch, select, synthesize, render, publish"
requires-python = ">=3.14"
dependencies = [
    "feedparser>=6.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "openai>=1.50",
    "tweepy>=4.17.0",
]
# All HTTP fetching goes through the markfetch CLI (npm), not a Python client —
# except X: no unauthenticated access exists, so tweepy talks to the paid API.

# Plain script package: run with `uv run python -m keepup`, nothing to build.
[tool.uv]
package = false
